--- a/user-accounts/package.json
+++ b/user-accounts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "user-accounts-seneca-example",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "User accounts example",
   "subdomain": "user-accounts-seneca-example",
   "main": "app.js",
@@ -9,15 +9,15 @@
   },
   "repository": "",
   "author": "Richard Rodger",
-  "license": "BSD",
+  "license": "MIT",
   "dependencies": {
-    "express": "~3.0.4",
+    "express": "~3.1.0",
     "optimist": "~0.3.5",
     "ejs": "~0.8.3",
     "ejs-locals": "~1.0.2",
-    "seneca": "~0.4.4",
-    "seneca-user": "~0.1.1",
-    "seneca-auth": "~0.1.1"
+    "seneca": "~0.5.0",
+    "seneca-user": "~0.2.0",
+    "seneca-auth": "~0.2.0"
   },
   "files": [
     "app.js"
