--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -15,9 +15,11 @@
     "optimist": "~0.3.5",
     "ejs": "~0.8.3",
     "ejs-locals": "~1.0.2",
-    "seneca": "~0.5.0",
+    "seneca": "~0.5.2",
     "seneca-user": "~0.2.0",
-    "seneca-auth": "~0.2.0"
+    "seneca-auth": "~0.2.0",
+    "seneca-cart": "~0.1.1",
+    "seneca-engage": "~0.1.1"
   },
   "files": [
     "app.js"
