--- a/user-accounts/package.json
+++ b/user-accounts/package.json
@@ -15,9 +15,9 @@
     "optimist": "~0.3.5",
     "ejs": "~0.8.3",
     "ejs-locals": "~1.0.2",
-    "seneca": "~0.5.2",
-    "seneca-user": "~0.2.0",
-    "seneca-auth": "~0.2.1"
+    "seneca": "~0.5.x",
+    "seneca-user": "~0.2.1",
+    "seneca-auth": "~0.2.4"
   },
   "files": [
     "app.js"
