--- a/payment-gateway/package.json
+++ b/payment-gateway/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "~3.1.0",
     "optimist": "~0.3.5",
+    "node-uuid": "~1.4.0",
     "ejs": "~0.8.3",
     "ejs-locals": "~1.0.2",
     "seneca": "~0.5.x",
