--- a/payment-gateway/package.json
+++ b/payment-gateway/package.json
@@ -17,8 +17,12 @@
     "ejs": "~0.8.3",
     "ejs-locals": "~1.0.2",
     "seneca": "~0.5.x",
-    "seneca-pay": "~0.0.1",
-    "seneca-stripe-pay": "~0.0.1"
+    "seneca-pay":
+      "git:github.com/dominictarr/seneca-pay.git#99fb852ab64d421e2bdf3b52c2e4b616ee7010e5",
+    "seneca-stripe-pay": 
+      "git:github.com/dominictarr/seneca-stripe-pay.git#b3a9ca5618df410c0006b16209f9b2a5a6023ac3",
+    "range-parser": "0.0.4",
+    "mime": "~1.2.11"
   },
   "files": [
     "app.js"
