--- a/user-accounts/package.json
+++ b/user-accounts/package.json
@@ -15,9 +15,10 @@
     "optimist": "~0.3.5",
     "ejs": "~0.8.3",
     "ejs-locals": "~1.0.2",
-    "seneca": "~0.5.x",
-    "seneca-user": "~0.2.1",
-    "seneca-auth": "~0.2.4"
+    "seneca": "~0.5.14",
+    "seneca-user": "~0.2.6",
+    "seneca-auth": "~0.2.7",
+    "seneca-admin": "~0.1.2"
   },
   "files": [
     "app.js"
