--- a/plugin-web/package.json
+++ b/plugin-web/package.json
@@ -11,11 +11,14 @@
   "author": "Richard Rodger",
   "license": "MIT",
   "dependencies": {
-    "express": "~3.1.0",
+    "express": "~4.5.1",
+    "body-parser": "~1.4.3",
+    "cookie-parser": "~1.3.2",
+    "method-override": "~2.1.0",
     "optimist": "~0.3.5",
     "ejs": "~0.8.3",
     "ejs-locals": "~1.0.2",
-    "seneca": "0.5.18",
+    "seneca": "~0.5.18",
     "connect": "~2.7.4"
   },
   "files": [
