--- a/plugin-web/package.json
+++ b/plugin-web/package.json
@@ -15,11 +15,10 @@
     "body-parser": "~1.4.3",
     "cookie-parser": "~1.3.2",
     "method-override": "~2.1.0",
-    "optimist": "~0.3.5",
-    "ejs": "~0.8.3",
-    "ejs-locals": "~1.0.2",
+    "optimist": "~0.6.1",
     "seneca": "~0.5.18",
-    "connect": "~2.7.4"
+    "connect": "~3.0.1",
+    "serve-static": "~1.3.1"
   },
   "files": [
     "app.js"
