--- a/data-entities/package.json
+++ b/data-entities/package.json
@@ -8,8 +8,8 @@
   "author": "Richard Rodger",
   "license": "MIT",
   "dependencies": {
-    "seneca": "git://github.com/rjrodger/seneca.git#0.5.18",
-    "seneca-level-store": "0.1.3",
-    "seneca-jsonfile-store": "0.1.7"
+    "seneca": "*",
+    "seneca-level-store": "*",
+    "seneca-jsonfile-store": "*"
   }
 }
