--- a/micro-services/package.json
+++ b/micro-services/package.json
@@ -9,10 +9,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.4.3",
-    "express": "^4.5.1",
-    "seneca": "^0.5.18",
-    "seneca-auth": "^0.2.10",
-    "seneca-user": "^0.2.10"
+    "body-parser": "~1.4.3",
+    "express": "~4.5.1",
+    "seneca": "~0.5.19",
+    "seneca-auth": "~0.2.10",
+    "seneca-user": "~0.2.10"
   }
 }
