--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -11,9 +11,14 @@
   "author": "Richard Rodger",
   "license": "MIT",
   "dependencies": {
-    "express": "~3.1.0",
-    "optimist": "~0.3.5",
-    "ejs": "~0.8.3",
+    "express": "~4.6.0",
+    "body-parser": "~1.4.3",
+    "cookie-parser": "~1.3.2",
+    "method-override": "~2.1.1",
+    "express-session": "~1.6.5",
+    "serve-static": "~1.3.2",
+    "optimist": "~0.6.1",
+    "ejs": "~1.0.0",
     "ejs-locals": "~1.0.2",
     "seneca": "~0.5.18",
     "seneca-user": "~0.2.10",
