data-entities seneca 0.6.1

--- a/data-entities/package.json
+++ b/data-entities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "data-entities-seneca-example",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "Data entities example",
   "subdomain": "data-entities-seneca-example",
   "main": "main.js",
@@ -8,8 +8,8 @@
   "author": "Richard Rodger",
   "license": "MIT",
   "dependencies": {
-    "seneca": "~0.5.21",
-    "seneca-level-store": "~0.1.3",
-    "seneca-jsonfile-store": "~0.1.9"
+    "seneca": "plugin",
+    "seneca-level-store": "~0.2.1",
+    "seneca-jsonfile-store": "~0.2.2"
   }
 }
