--- a/plugin-web/package.json
+++ b/plugin-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plugin-web-seneca-example",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "Plugin web example",
   "subdomain": "plugin-web-seneca-example",
   "main": "app.js",
@@ -11,13 +11,13 @@
   "author": "Richard Rodger",
   "license": "MIT",
   "dependencies": {
-    "express": "~4.5.1",
-    "body-parser": "~1.4.3",
-    "cookie-parser": "~1.3.2",
-    "method-override": "~2.1.0",
+    "express": "~4.11.2",
+    "body-parser": "~1.11.0",
+    "cookie-parser": "~1.3.3",
+    "method-override": "~2.3.1",
     "optimist": "~0.6.1",
-    "seneca": "~0.5.21",
-    "connect": "~3.0.1",
-    "serve-static": "~1.3.1"
+    "seneca": "plugin",
+    "connect": "~3.3.4",
+    "serve-static": "~1.8.1"
   }
 }
