--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shopping-cart-seneca-example",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "Seneca shopping cart example",
   "subdomain": "shopping-cart-seneca-example",
   "main": "app.js",
@@ -11,21 +11,22 @@
   "author": "Richard Rodger",
   "license": "MIT",
   "dependencies": {
-    "express": "~4.6.0",
-    "body-parser": "~1.4.3",
+    "body-parser": "~1.9.0",
     "cookie-parser": "~1.3.2",
-    "method-override": "~2.1.1",
-    "express-session": "~1.6.5",
-    "serve-static": "~1.3.2",
-    "optimist": "~0.6.1",
     "ejs": "~1.0.0",
     "ejs-locals": "~1.0.2",
-    "seneca": "~0.5.21",
-    "seneca-user": "~0.2.10",
-    "seneca-auth": "~0.3.0",
+    "express": "~4.9.5",
+    "express-session": "~1.8.2",
+    "method-override": "~2.2.0",
+    "optimist": "~0.6.1",
+    "seneca": "plugin",
+    "seneca-admin": "~0.2.0",
+    "seneca-auth": "~0.4.0",
     "seneca-cart": "~0.2.0",
-    "seneca-engage": "~0.2.1",
-    "seneca-data-editor": "~0.1.6",
-    "seneca-admin": "~0.1.4"
+    "seneca-data-editor": "~0.2.0",
+    "seneca-engage": "~0.3.1",
+    "seneca-jsonrest-api": "~0.3.1",
+    "seneca-user": "~0.2.10",
+    "serve-static": "~1.6.3"
   }
 }
