--- a/user-accounts/package.json
+++ b/user-accounts/package.json
@@ -11,21 +11,23 @@
   "author": "Richard Rodger",
   "license": "MIT",
   "dependencies": {
-    "express": "~4.9.5",
     "body-parser": "~1.9.0",
     "cookie-parser": "~1.3.2",
-    "method-override": "~2.2.0",
-    "express-session": "~1.8.2",
-    "serve-static": "~1.6.3",
-    "optimist": "~0.6.1",
     "ejs": "~1.0.0",
     "ejs-locals": "~1.0.2",
+    "express": "~4.9.5",
+    "express-session": "~1.8.2",
+    "method-override": "~2.2.0",
+    "optimist": "~0.6.1",
     "seneca": "plugin",
-    "seneca-user": "~0.2.10",
-    "seneca-auth": "~0.4.0",
     "seneca-admin": "~0.2.0",
+    "seneca-auth": "~0.4.0",
+    "seneca-data-editor": "~0.2.0",
+    "seneca-facebook-auth": "^0.1.0",
     "seneca-jsonrest-api": "~0.3.1",
+    "seneca-local-auth": "~0.0.3",
     "seneca-perm": "~0.4.0",
-    "seneca-data-editor": "~0.2.0"
+    "seneca-user": "~0.2.10",
+    "serve-static": "~1.6.3"
   }
 }
