--- a/api-server/package.json
+++ b/api-server/package.json
@@ -7,12 +7,16 @@
   "repository": "",
   "author": "Richard Rodger",
   "license": "MIT",
+  "scripts": {
+    "start": "node app.js --seneca.log.all",
+    "client": "node client.js"
+  },
   "dependencies": {
-    "body-parser": "~1.11.0",
-    "express": "~4.11.1",
-    "lodash": "~3.0.1",
-    "request": "~2.51.0",
-    "seneca": "plugin",
+    "body-parser": "~1.15.1",
+    "express": "~4.13.4",
+    "lodash": "~4.13.1",
+    "request": "~2.72.0",
+    "seneca": "2.1.0",
     "seneca-jsonrest-api": "~0.3.1"
   }
 }
