--- a/micro-services/package.json
+++ b/micro-services/package.json
@@ -4,15 +4,16 @@
   "description": "Seneca micro-services example",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "~1.11.0",
-    "express": "~4.11.2",
-    "seneca": "plugin",
-    "seneca-auth": "~0.4.0",
-    "seneca-user": "~0.2.10"
+    "body-parser": "~1.15.1",
+    "express": "~4.13.4",
+    "seneca": "0.6.2",
+    "seneca-auth": "~1.0.1",
+    "seneca-user": "~1.0.2"
   }
 }
