--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -5,28 +5,28 @@
   "subdomain": "shopping-cart-seneca-example",
   "main": "app.js",
   "scripts": {
-    "start": "app.js"
+    "start": "node app.js -p 3000"
   },
   "repository": "",
   "author": "Richard Rodger",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "~1.9.0",
-    "cookie-parser": "~1.3.2",
-    "ejs": "~1.0.0",
+    "body-parser": "~1.15.1",
+    "cookie-parser": "~1.4.2",
+    "ejs": "~2.4.2",
     "ejs-locals": "~1.0.2",
-    "express": "~4.9.5",
-    "express-session": "~1.8.2",
-    "method-override": "~2.2.0",
+    "express": "~4.13.4",
+    "express-session": "~1.13.0",
+    "method-override": "~2.3.6",
     "optimist": "~0.6.1",
-    "seneca": "plugin",
+    "seneca": "0.6.2",
     "seneca-admin": "~0.2.0",
-    "seneca-auth": "~0.4.0",
+    "seneca-auth": "~1.0.1",
     "seneca-cart": "~0.2.0",
     "seneca-data-editor": "~0.2.0",
     "seneca-engage": "~0.3.1",
     "seneca-jsonrest-api": "~0.3.1",
-    "seneca-user": "~0.2.10",
-    "serve-static": "~1.6.3"
+    "seneca-user": "~1.0.2",
+    "serve-static": "~1.10.2"
   }
 }
