--- a/user-accounts/package.json
+++ b/user-accounts/package.json
@@ -5,27 +5,28 @@
   "subdomain": "user-accounts-seneca-example",
   "main": "app.js",
   "scripts": {
-    "start": "app.js"
+    "start": "node app.js"
   },
   "repository": "",
   "author": "Richard Rodger",
   "license": "MIT",
   "dependencies": {
-    "express": "~4.9.5",
-    "body-parser": "~1.9.0",
-    "cookie-parser": "~1.3.2",
-    "method-override": "~2.2.0",
-    "express-session": "~1.8.2",
-    "serve-static": "~1.6.3",
+    "express": "~4.13.4",
+    "body-parser": "~1.15.1",
+    "cookie-parser": "~1.4.2",
+    "method-override": "~2.3.6",
+    "express-session": "~1.13.0",
+    "serve-static": "~1.10.2",
     "optimist": "~0.6.1",
-    "ejs": "~1.0.0",
+    "ejs": "~2.4.1",
     "ejs-locals": "~1.0.2",
-    "seneca": "plugin",
-    "seneca-user": "~0.2.10",
-    "seneca-auth": "~0.4.0",
+    "node-uuid": "~1.4.0",
+    "seneca": "0.6.2",
+    "seneca-user": "~1.0.1",
+    "seneca-auth": "~1.0.1",
     "seneca-admin": "~0.2.0",
     "seneca-jsonrest-api": "~0.3.1",
-    "seneca-perm": "~0.4.0",
+    "seneca-perm": "~0.5.6",
     "seneca-data-editor": "~0.2.0"
   }
 }
