--- a/micro-services/package.json
+++ b/micro-services/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "body-parser": "~1.15.1",
     "express": "~4.13.4",
-    "seneca": "0.6.2",
+    "seneca": "plugin",
     "seneca-entity": "0.1.1",
     "seneca-auth": "~1.0.1",
     "seneca-user": "~1.0.2"
