--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -19,7 +19,7 @@
     "express-session": "~1.13.0",
     "method-override": "~2.3.6",
     "optimist": "~0.6.1",
-    "seneca": "0.6.2",
+    "seneca": "plugin",
     "seneca-entity": "0.1.1",
     "seneca-admin": "~0.2.0",
     "seneca-auth": "~1.0.1",
