--- a/data-entities/package.json
+++ b/data-entities/package.json
@@ -9,7 +9,9 @@
   "license": "MIT",
   "dependencies": {
     "seneca": "plugin",
-    "seneca-level-store": "~0.2.1",
-    "seneca-jsonfile-store": "~0.2.2"
+    "seneca-basic": "^0.5.0",
+    "seneca-entity": "^1.3.0",
+    "seneca-jsonfile-store": "^0.2.2",
+    "seneca-level-store": "^0.2.3"
   }
 }
